<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/background_black">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_black">
        <LinearLayout
            android:id="@+id/name_and_vol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/ticker_pair_one"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ticker_pair_one"
                    android:textColor="@color/white"
                    android:textSize="22sp"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/ticker_pair_two"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ticker_pair_two"
                    android:textSize="16sp"
                    android:textColor="@color/white"/>
            </LinearLayout>


            <TextView
                android:id="@+id/ticker_vol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ticker_vol"
                android:textSize="16sp"
                android:textColor="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_toStartOf="@id/change_percent"
            android:layout_alignBottom="@id/name_and_vol"
            android:layout_marginEnd="20dp">
            <TextView
                android:id="@+id/ticker_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ticker_price"
                android:textColor="@color/green"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/ticker_price_dollar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ticker_price_dollar"
                android:textSize="16sp"
                android:textColor="@color/white"/>
        </LinearLayout>

        <TextView
            android:id="@+id/change_percent"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/name_and_vol"
            android:layout_alignBottom="@id/name_and_vol"
            android:layout_alignParentEnd="true"
            android:background="@drawable/change_percent_rounded_green"
            android:gravity="center"

            android:text="@string/change_percent"
            android:textColor="@color/white"
            android:textSize="18sp" />


    </RelativeLayout>

</androidx.cardview.widget.CardView>